# adi-cli

./: CLAUDE.md  Cargo.toml  DAEMON.md  README.md  config.toml
.github/workflows/: release.yml
plugins/de-DE/: Cargo.toml  messages.ftl  plugin.toml
plugins/de-DE/src/: lib.rs
plugins/en-US/: Cargo.toml  messages.ftl  plugin.toml
plugins/en-US/src/: lib.rs
plugins/es-ES/: Cargo.toml  messages.ftl  plugin.toml
plugins/es-ES/src/: lib.rs
plugins/fr-FR/: Cargo.toml  messages.ftl  plugin.toml
plugins/fr-FR/src/: lib.rs
plugins/ja-JP/: Cargo.toml  messages.ftl  plugin.toml
plugins/ja-JP/src/: lib.rs
plugins/ko-KR/: Cargo.toml  messages.ftl  plugin.toml
plugins/ko-KR/src/: lib.rs
plugins/ru-RU/: Cargo.toml  messages.ftl  plugin.toml
plugins/ru-RU/src/: lib.rs
plugins/uk-UA/: Cargo.toml  messages.ftl  plugin.toml
plugins/uk-UA/src/: lib.rs
plugins/zh-CN/: Cargo.toml  messages.ftl  plugin.toml
plugins/zh-CN/src/: lib.rs
src/: args.rs  clienv.rs  cmd_config.rs  cmd_daemon.rs  cmd_external.rs  cmd_info.rs  cmd_interactive.rs  cmd_logs.rs  cmd_plugin.rs  cmd_run.rs  cmd_search.rs  cmd_start.rs  completions.rs  component.rs  error.rs  http_server.rs  init.rs  installer.rs  lib.rs  main.rs  mcp_server.rs  plugin_registry.rs  plugin_runtime.rs  project_config.rs  registry.rs  release_installer.rs  self_update.rs  user_config.rs
src/commands/: completions.rs  debug.rs  external.rs  interactive.rs  mod.rs  plugin.rs  run.rs  search.rs
src/components/: base_component.rs  base_tasks_component.rs  indexer_cli.rs  indexer_mcp.rs  llm_code_indexer_http.rs  mod.rs  tasks_cli.rs  tasks_http.rs  tasks_mcp.rs
src/daemon/: client.rs  executor.rs  health.rs  mod.rs  protocol.rs  server.rs  services.rs
