[package]
name = "adi-cli"
version = "0.8.4"
edition = "2021"
license = "BSL-1.0"
description = "CLI for ADI family components - component installer and manager"
authors = ["ADI Team"]

[[bin]]
name = "adi"
path = "src/main.rs"

[dependencies]
thiserror = "2"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
anyhow = "1.0"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored", "stream"] }
flate2 = "1"
tar = "0.4"
zip = "0.6"

# GitHub API
lib-client-github = { path = "../lib-client-github" }

# Plugin system
lib-plugin-registry = { path = "../lib-plugin-registry" }
lib-plugin-host = { path = "../lib-plugin-host" }
lib-plugin-abi = { path = "../lib-plugin-abi" }
lib-plugin-manifest = { path = "../lib-plugin-manifest" }
lib-plugin-verify = { path = "../lib-plugin-verify" }

# HTTP server for plugin-provided routes
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
