[package]
name = "adi-cli"
version = "0.9.2"
edition = "2021"
license = "BSL-1.0"
description = "CLI for ADI family components - component installer and manager"
authors = ["ADI Team"]

[[bin]]
name = "adi"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15"
thiserror = "2"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4"
indicatif = "0.18.3"
console = "0.16.2"
dialoguer = "0.12.0"
anyhow = "1.0"
dirs = "6.0.0"
reqwest = { version = "0.13.1", features = ["json", "native-tls-vendored", "stream"] }
flate2 = "1"
tar = "0.4"
zip = "0.6"
tracing = "0.1"

# GitHub API
lib-client-github = { path = "../lib/lib-client/github" }

# Plugin system
lib-plugin-registry = { path = "../lib/lib-plugin-registry" }
lib-plugin-host = { path = "../lib/lib-plugin-host" }
lib-plugin-abi = { path = "../lib/lib-plugin-abi" }
lib-plugin-abi-v3 = { path = "../lib/lib-plugin-abi-v3" }
lib-plugin-manifest = { path = "../lib/lib-plugin-manifest" }

# Internationalization
lib-i18n-core = { path = "../lib/lib-i18n-core" }

# HTTP server for `adi start`
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
hostname = "0.4"

# TTY detection for auto-install prompts
atty = "0.2"
