[package]
name = "adi-cli-lang-en"
version = "3.0.0"
edition = "2021"
license = "BSL-1.0"
description = "English translations for ADI CLI (v3)"

[lib]
crate-type = ["cdylib"]

[dependencies]
lib-plugin-abi-v3 = { path = "../../../lib/lib-plugin-abi-v3" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.plugin]
id = "adi.cli.en-US"
name = "ADI CLI - English"
type = "translation"

[package.metadata.plugin.compatibility]
api_version = 3
min_host_version = "3.0.0"

[[package.metadata.plugin.provides]]
id = "adi.i18n.cli.en-US"
version = "1.0.0"
description = "English translations for CLI"

[package.metadata.plugin.translation]
translates = "adi.cli"
language = "en-US"
language_name = "English (United States)"
namespace = "cli"
