[package]
name = "adi-cli-lang-fr-FR"
version = "3.0.0"
edition = "2021"
license = "BSL-1.0"
description = "Translations for fr-FR for ADI CLI (v3)"

[lib]
crate-type = ["cdylib"]

[dependencies]
lib-plugin-abi-v3 = { path = "../../../lib/lib-plugin-abi-v3" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
serde_json = "1.0"

[package.metadata.plugin]
id = "adi.cli.fr-FR"
name = "ADI CLI - Français"
type = "translation"

[package.metadata.plugin.compatibility]
api_version = 3
min_host_version = "3.0.0"

[[package.metadata.plugin.provides]]
id = "adi.i18n.cli.fr-FR"
version = "3.0.0"
description = "French translations for CLI"

[package.metadata.plugin.translation]
translates = "adi.cli"
language = "fr-FR"
language_name = "Français"
namespace = "cli"
