[package]
name = "cli-lang-ru-RU"
version = "3.0.0"
edition = "2021"
license = "BSL-1.0"
description = "Translations for ru-RU for ADI CLI (v3)"

[lib]
crate-type = ["cdylib"]

[dependencies]
lib-plugin-abi-v3 = { path = "../../../lib/lib-plugin-abi-v3" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
serde_json = "1.0"

[package.metadata.plugin]
id = "adi.cli.ru-RU"
name = "ADI CLI - Русский"
type = "translation"

[package.metadata.plugin.compatibility]
api_version = 3
min_host_version = "3.0.0"

[[package.metadata.plugin.provides]]
id = "adi.i18n.cli.ru-RU"
version = "3.0.0"
description = "Russian translations for CLI"

[package.metadata.plugin.translation]
translates = "adi.cli"
language = "ru-RU"
language_name = "Русский"
namespace = "cli"
