[package]
name = "adi-cli-lang-uk-UA"
version = "3.0.0"
edition = "2021"
license = "BSL-1.0"
description = "Translations for uk-UA for ADI CLI (v3)"

[lib]
crate-type = ["cdylib"]

[dependencies]
lib-plugin-abi-v3 = { path = "../../../lib/lib-plugin-abi-v3" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
serde_json = "1.0"
