[package]
name = "adi-cli-lang-zh-CN"
version = "3.0.0"
edition = "2021"
license = "BSL-1.0"
description = "Translations for zh-CN for ADI CLI (v3)"

[lib]
crate-type = ["cdylib"]

[dependencies]
lib-plugin-abi-v3 = { path = "../../../lib/lib-plugin-abi-v3" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
serde_json = "1.0"

[package.metadata.plugin]
id = "adi.cli.zh-CN"
name = "ADI CLI - 中文"
type = "translation"

[package.metadata.plugin.compatibility]
api_version = 3
min_host_version = "3.0.0"

[[package.metadata.plugin.provides]]
id = "adi.i18n.cli.zh-CN"
version = "3.0.0"
description = "Chinese translations for CLI"

[package.metadata.plugin.translation]
translates = "adi.cli"
language = "zh-CN"
language_name = "中文 (简体)"
namespace = "cli"
